Revert "use docker package for action"
This reverts commit b7f9ae4685f0a704c2b89ab64f00ae68e461c5cf.

--- a/action.yml
+++ b/action.yml
@@ -2,4 +2,4 @@ name: addonmaker
 description: addonmaker by ferronn-dev
 runs:
   using: docker
-  image: docker://docker.pkg.github.com/ferronn-dev/addonmaker/addonmaker:main
+  image: Dockerfile
