an attempt to let addons specify the version to use

--- a/action.yml
+++ b/action.yml
@@ -7,9 +7,13 @@ inputs:
   github_token:
     description: GITHUB_TOKEN, if command is release
     required: false
+  version:
+    default: 'latest'
+    description: docker tag to use
+    required: false
 runs:
   using: docker
-  image: docker://ghcr.io/ferronn-dev/addonmaker:latest
+  image: docker://ghcr.io/ferronn-dev/addonmaker:${{ inputs.version }}
   args:
   - ${{ inputs.command }}
   - ${{ inputs.github_token }}
