Revert "an attempt to let addons specify the version to use"
This reverts commit c0ce9335d234ad3b2803a7995dd206bd7a37530a.

--- a/action.yml
+++ b/action.yml
@@ -7,13 +7,9 @@ inputs:
   github_token:
     description: GITHUB_TOKEN, if command is release
     required: false
-  version:
-    default: 'latest'
-    description: docker tag to use
-    required: false
 runs:
   using: docker
-  image: docker://ghcr.io/ferronn-dev/addonmaker:${{ inputs.version }}
+  image: docker://ghcr.io/ferronn-dev/addonmaker:latest
   args:
   - ${{ inputs.command }}
   - ${{ inputs.github_token }}
