--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,9 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v1
       with:
+        cache_froms: ghcr.io/ferronn-dev/addonmaker:latest
         password: ${{ secrets.CR_PAT }}
+        push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         registry: ghcr.io
         repository: ferronn-dev/addonmaker
         tags: latest
