--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,10 +7,11 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Pull previous docker version
+      run: 'docker pull ghcr.io/ferronn-dev/addonmaker:latest'
     - name: Build and push
       uses: docker/build-push-action@v1
       with:
-        cache_froms: ghcr.io/ferronn-dev/addonmaker:latest
         password: ${{ secrets.CR_PAT }}
         push: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         registry: ghcr.io
