--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+    - name: Pull old version
+      run: 'docker pull ghcr.io/ferronn-dev/addonmaker:latest'
     - name: Build and push
       uses: docker/build-push-action@v1
       with:
