attempt to revert to build-push-action@v2 for buildx support

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,13 +5,14 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: Build and push
-      uses: docker/build-push-action@v1
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
       with:
-        password: ${{ secrets.CR_PAT }}
         registry: ghcr.io
-        repository: ferronn-dev/addonmaker
-        tags: latest
         username: ferronn-dev
+        password: ${{ secrets.CR_PAT }}
+    - name: Build and push
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: ghcr.io/ferronn-dev/addonmaker:latest
