--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,5 +14,6 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
+        platforms: linux/amd64,linux/arm64
         push: true
         tags: ghcr.io/ferronn-dev/addonmaker:latest
