--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
         platforms: linux/amd64,linux/arm64
         push: true
         tags: ghcr.io/ferronn-dev/addonmaker:latest
