--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -11,7 +11,7 @@ RUN apt update && apt -y install \
     python3-pip \
     subversion \
     `cat packages.txt`
-RUN cargo install --root=/usr/local stylua
+RUN cargo install --root=/usr/local --version=0.12.4 stylua
 COPY requirements.txt .
 RUN pip3 install -r requirements.txt
 COPY rocks.txt .
