--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,5 +6,6 @@
 	"features": {
 		"docker-from-docker": "latest"
 	},
+	"postCreateCommand": "pre-commit install && pre-commit run -a",
 	"remoteUser": "vscode"
 }
