--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,4 +3,6 @@ RUN cargo install --root=/opt/stylua --version=0.12.4 stylua
 
 FROM mcr.microsoft.com/vscode/devcontainers/python:0-bullseye
 RUN pip3 install pre-commit
+COPY requirements.txt /tmp
+RUN pip3 install -r /tmp/requirements.txt
 COPY --from=stylua-builder /opt/stylua /usr/local
