--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -9,6 +9,14 @@ repos:
   rev: v0.12.1
   hooks:
   - id: stylua-system
+- repo: local
+  hooks:
+  - id: pylint
+    name: pylint
+    entry: pylint
+    language: system
+    types: [python]
+    require_serial: true
 - repo: meta
   hooks:
   - id: check-hooks-apply
