--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,8 @@
 ---
 name: build
-on: push
+on:
+  pull_request:
+  push:
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,5 +23,5 @@ jobs:
         cache-from: type=gha
         cache-to: type=gha,mode=max
         platforms: linux/amd64,linux/arm64
-        push: true
+        push: ${{ ((github.event_name == 'push' && github.ref == 'refs/heads/main') }}
         tags: ghcr.io/ferronn-dev/addonmaker:latest
