--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,6 +17,8 @@ jobs:
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v1
+    - name: Build and test in devcontainer
+      uses: devcontainers/ci@v0.2
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
