--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Build and test in devcontainer
       uses: devcontainers/ci@v0.2
+      with:
+        runCmd: bash -c "$(jq .postCreateCommand .devcontainer/devcontainer.json)"
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
