--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Build and test in devcontainer
       uses: devcontainers/ci@v0.2
       with:
+        imageName: ghcr.io/ferronn-dev/addonmaker-devcontainer
         runCmd: true
     - name: Build and push
       uses: docker/build-push-action@v2
