--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
       uses: devcontainers/ci@v0.2
       with:
         imageName: ghcr.io/ferronn-dev/addonmaker-devcontainer
+        refFilterForPush: refs/heads/main
         runCmd: true
     - name: Build and push
       uses: docker/build-push-action@v2
