--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -15,7 +15,7 @@ RUN apt update && apt -y install \
     subversion \
     unzip
 COPY requirements.txt .
-RUN pip3 install -r requirements.txt
+RUN pip3 install --break-system-packages -r requirements.txt
 RUN hererocks -l 5.1 -r 3.8.0 /usr/local
 COPY rocks.txt .
 RUN cat rocks.txt | xargs -n1 luarocks install
